# stl2png

./: README.md  pyproject.toml
stl2png/: main.py  pyproject.toml
stl2png/stl2png/: main.py
